--- a/src/components/NotificationBox/style.module.scss
+++ b/src/components/NotificationBox/style.module.scss
@@ -10,7 +10,7 @@
   position: fixed;
   top: 65px;
   right: -300px;
-  z-index: 5;
+  z-index: 20;
   transition: all 0.5s;
   box-shadow: 0px 6px 5px 0px rgba(0, 0, 0, 0.25);
 }
